--- a/index.html
+++ b/index.html
@@ -257,6 +257,10 @@
                 font-size: 1.5em; /* Decrease font size */
                 padding: 10px 20px; /* Adjust padding */
             }
+
+            header h1 {
+                text-align: center; /* Center align header text */
+            }
         }
     </style>
 </head>
@@ -336,19 +340,3 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
