--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world!</h1>
+            <h1>Welcome to my world</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
