--- a/index.html
+++ b/index.html
@@ -73,8 +73,6 @@
             display: flex; /* Use flexbox for centering */
             justify-content: center; /* Center horizontally */
             align-items: center; /* Center vertically */
-            height: 100%; /* Set header height to take full height of body */
-            margin-top: 0; /* Reset margin top to align header with top of viewport */
         }
 
         @keyframes glowHeader {
@@ -281,26 +279,66 @@
     <video id="main-video" autoplay muted loop>
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
-    <header>
-        <h1>Welcome to my world</h1>
-    </header>
-    <div class="content">
-        <div class="profile-picture">
-            <img src="https://i.imgur.com/FnK1Bw9.png" alt="Profile Picture">
+    <div id="main-content">
+        <header>
+            <h1>Welcome to my world</h1>
+        </header>
+        <div class="content">
+            <div class="profile-picture">
+                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 (1).jpeg" alt="Profile Picture">
+            </div>            
+            <div class="intro">
+                <h2>ngleeqthai</h2>
+                <p>manh beo mup rup.</p>
+            </div>
+            <div class="links">
+                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
+                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
+                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
+                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
+            </div>
         </div>
-        <div class="intro">
-            <h2>About Me</h2>
-            <p>Hello! I'm Ng Lee Thai, a Valorant fan and developer.</p>
-        </div>
-        <div class="links">
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Steam</a>
-            <a href="#">Valorant Tracker</a>
-        </div>
+        <footer>
+            <p>&copy; WWWWWWWWWWWWWWW</p>
+        </footer>
     </div>
-    <footer>
-        <p>Designed with <img class="valorant-logo" src="https://i.imgur.com/FnK1Bw9.png" alt="Valorant Logo"> by Ng Lee Thai</p>
-    </footer>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Show and start loading video from the 3rd second instantly
+            const loadingVideo = document.getElementById("loading-video");
+            loadingVideo.currentTime = 3; // Start from the 3rd second
+            loadingVideo.style.display = "block"; // Show loading video
+            loadingVideo.play(); // Start playing loading video
+
+            // Hide the loading screen and show the video background and main content after 6 seconds
+            setTimeout(function() {
+                document.getElementById("loading-screen").style.display = "none";
+                document.getElementById("loading-video").style.display = "none"; // Hide loading video
+                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
+                document.getElementById("main-video").style.display = "block"; // Display main video
+                document.getElementById("main-video").play(); // Play main video
+                document.getElementById("main-content").style.display = "block";
+            }, 6000); // 6000 milliseconds = 6 seconds
+
+            // Ellipsis animation (now faster, every 166 milliseconds)
+            const ellipsis = document.getElementById('ellipsis');
+            let count = 0;
+            setInterval(() => {
+                count++;
+                if (count === 1) {
+                    ellipsis.textContent = '';
+                } else if (count === 2) {
+                    ellipsis.textContent = '.';
+                } else if (count === 3) {
+                    ellipsis.textContent = '..';
+                } else if (count === 4) {
+                    ellipsis.textContent = '...';
+                    count = 0;
+                }
+            }, 166); // Change every 0.166 seconds (166 milliseconds)
+        });
+    </script>
 </body>
 </html>
