--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         </header>
         <div class="content">
             <div class="profile-picture">
-                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 (1).jpeg" alt="Profile Picture">
+                <img src="4C7F5981-86C2-416D-9742-0EECAC5626B1 1).jpeg" alt="Profile Picture">
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
