--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
             </div>            
             <div class="intro">
                 <h2>ngleeqthai</h2>
-                <p>social media:.</p>
+                <p>social media:</p>
             </div>
             <div class="links">
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
