--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                 <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
             </div>            
             <div class="intro">
-                <h2>ngleeqthai</h2>
+                <h2>ngleeqthai
+                I'm not addicted, I just use it to stay awake</h2>
                 <p>social media:</p>
             </div>
             <div class="links">
