--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         }
 
         .links {
-            margin-top: 1px;
+            margin-top: 10px; /* Adjusted margin to bring links closer to social media text */
         }
 
         .links a {
@@ -342,3 +342,4 @@
     </script>
 </body>
 </html>
+
