--- a/index.html
+++ b/index.html
@@ -139,14 +139,18 @@
         .intro p {
             font-size: 4em; /*Title size*/
             line-height: 1.6;
+            margin-bottom: 0;
         }
 
         .links {
             margin-top: 10px; /* Adjusted margin to bring links closer to social media text */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
         }
 
         .links a {
-            display: inline-block;
             margin: 10px;
             padding: 10px 20px; /* Responsive padding */
             background: linear-gradient(135deg, #774c96, #59198e);
@@ -342,4 +346,5 @@
     </script>
 </body>
 </html>
+
 
