--- a/index.html
+++ b/index.html
@@ -272,15 +272,15 @@
 </head>
 <body>
     <div id="loading-screen">
-        <video id="loading-video" autoplay muted loop>
+        <video id="loading-video" autoplay muted loop playsinline>
             <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
         </video>
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
-    <video id="video-background" autoplay muted loop>
+    <video id="video-background" autoplay muted loop playsinline>
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
-    <video id="main-video" autoplay muted loop>
+    <video id="main-video" autoplay muted loop playsinline>
         <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
     <div id="main-content">
@@ -346,5 +346,3 @@
     </script>
 </body>
 </html>
-
-
