--- a/index.html
+++ b/index.html
@@ -273,15 +273,15 @@
 <body>
     <div id="loading-screen">
         <video id="loading-video" autoplay muted loop playsinline>
-            <source src="https://y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
+            <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
         </video>
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop playsinline>
-        <source src="https://y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
+        <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
     <video id="main-video" autoplay muted loop playsinline>
-        <source src="https://y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
+        <source src="y2mate.com - Clove LIVE wallpaper 4K  Valorant Episode 8  Act 2  Homescreen_1080p.mp4" type="video/mp4">
     </video>
     <div id="main-content">
         <header>
