--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <source src="Main Bg.mp4" type="video/mp4">
     </video>
     <video id="main-video" autoplay muted loop playsinline>
-        <source src="Main Bg" type="video/mp4">
+        <source src="Main Bg.mp4" type="video/mp4">
     </video>
     <div id="main-content">
         <header>
