--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop playsinline>
-        <source src="Main Bg.mp4" type="video/mp4">
+        <source src="Main.mp4" type="video/mp4">
     </video>
     <video id="main-video" autoplay muted loop playsinline>
-        <source src="Main Bg.mp4" type="video/mp4">
+        <source src="Main.mp4" type="video/mp4">
     </video>
     <div id="main-content">
         <header>
