--- a/index.html
+++ b/index.html
@@ -317,9 +317,9 @@
                 loadingVideo.currentTime = 3; // Start from the 3rd second
                 loadingVideo.style.display = "block"; // Show loading video
                 loadingVideo.play(); // Start playing loading video
-            }, 100); // 100 milliseconds delay before showing loading video
+            }, 3000); // 3000 milliseconds delay before showing loading video
 
-            // Hide the loading screen and show the video background and main content after 6 seconds
+            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
             setTimeout(function() {
                 document.getElementById("loading-screen").style.display = "none";
                 document.getElementById("loading-video").style.display = "none"; // Hide loading video
@@ -327,7 +327,7 @@
                 document.getElementById("main-video").style.display = "block"; // Display main video
                 document.getElementById("main-video").play(); // Play main video
                 document.getElementById("main-content").style.display = "block";
-            }, 6000); // 6000 milliseconds = 6 seconds
+            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
 
             // Ellipsis animation (now faster, every 166 milliseconds)
             const ellipsis = document.getElementById('ellipsis');
@@ -349,4 +349,3 @@
     </script>
 </body>
 </html>
-
