--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             color: #fff;
             position: relative; /* For layering content over the video */
             min-height: 100vh; /* Ensure body takes at least full viewport height */
+            display: flex;
+            flex-direction: column;
         }
 
         #loading-screen {
@@ -60,6 +62,7 @@
 
         #main-content {
             display: none; /* Hide the main content initially */
+            flex: 1; /* Allow main content to grow and take available space */
         }
 
         header {
@@ -349,3 +352,4 @@
     </script>
 </body>
 </html>
+
