--- a/index.html
+++ b/index.html
@@ -18,72 +18,63 @@
             font-family: 'Brams';
             margin: 0;
             padding: 0;
-            overflow-y: auto; /* Enable vertical scroll */
-            overflow-x: hidden; /* Prevent horizontal scroll */
             color: #fff;
-            position: relative; /* For layering content over the video */
-            min-height: 100vh; /* Ensure body takes at least full viewport height */
             display: flex;
             flex-direction: column;
+            min-height: 100vh;
+            overflow-x: hidden; /* Prevent horizontal scroll */
+            overflow-y: auto; /* Enable vertical scroll */
+            background: black; /* Optional background color */
+        }
+
+        #loading-screen, #video-background, #main-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
         }
 
         #loading-screen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: #000;
             display: flex;
             justify-content: center;
             align-items: center;
-            z-index: 9999;
-        }
-
-        #loading-video, #video-background, #main-video {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Crop and fit the video */
-            z-index: -1; /* Ensure the video is in the background */
-            pointer-events: none; /* Make the video non-interactive */
-        }
-
-        #loading-video, #main-video {
-            display: none; /* Hide loading video and main video initially */
-        }
-
-        #loading-screen h1 {
-            font-size: 5em;
-            color: #fff;
+            background-color: #000;
+            z-index: 999;
         }
 
         #main-content {
-            display: none; /* Hide the main content initially */
-            flex: 1; /* Allow main content to grow and take available space */
+            flex: 1; /* Expand to fill remaining vertical space */
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            max-width: 1000px;
+            margin: 0 auto;
         }
 
         header {
             background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            animation: glowHeader 2s ease-in-out infinite alternate; /* Add glow animation */
-            position: fixed; /* Fix header position */
-            width: 100%;
+            animation: glowHeader 2s ease-in-out infinite alternate;
+            position: fixed;
             top: 0;
-            z-index: 1000; /* Ensure it stays above other content */
-            display: flex; /* Use flexbox for centering */
-            justify-content: center; /* Center horizontally */
-            align-items: center; /* Center vertically */
+            width: 100%;
+            z-index: 1000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         @keyframes glowHeader {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow (pink/purple glow) */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0);
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8);
             }
         }
 
@@ -96,26 +87,23 @@
         }
 
         .content {
-            padding: 20px;
             text-align: center;
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 80px; /* Add margin to avoid content being hidden behind the fixed header */
-            max-width: 1000px; /* Limit content width */
-            margin-left: auto;
-            margin-right: auto;
-            width: 90%; /* Adjust width as needed */
+            margin-top: 80px;
+            width: 100%;
+            max-width: 1000px;
         }
 
         .profile-picture {
-            max-width: 15vw; /* Responsive size */
+            max-width: 15vw;
             margin-bottom: 10px;
-            border-radius: 50%; /* Circular shape */
-            overflow: hidden; /* Ensure image does not overflow */
-            position: relative; /* Position relative for absolute border */
-            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
-            border: 2px solid rgba(204, 94, 255, 0.8); /* Pink/purple border */
+            border-radius: 50%;
+            overflow: hidden;
+            position: relative;
+            box-shadow: 0 0 20px rgba(204, 94, 255, 0.8);
+            border: 2px solid rgba(204, 94, 255, 0.8);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -123,11 +111,11 @@
 
         .profile-picture img {
             width: 100%;
-            border-radius: 50%; /* Circular shape */
+            border-radius: 50%;
         }
 
         .intro {
-            max-width: 90vw; /* Responsive size */
+            max-width: 90vw;
             padding: 20px;
             background-color: transparent;
             margin-bottom: 20px;
@@ -140,13 +128,13 @@
         }
 
         .intro p {
-            font-size: 4em; /*Title size*/
+            font-size: 4em;
             line-height: 1;
             margin-bottom: 0;
         }
 
         .links {
-            margin-top: 0px; /* Adjusted margin to bring links closer to social media text */
+            margin-top: 10px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -155,11 +143,11 @@
 
         .links a {
             margin: 10px;
-            padding: 10px 20px; /* Responsive padding */
+            padding: 10px 20px;
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
-            font-size: 3em; /* Responsive font size */
+            font-size: 3em;
             border-radius: 3px;
             border: 2px solid transparent;
             position: relative;
@@ -203,15 +191,16 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            animation: glowFooter 2s ease-in-out infinite alternate; /* Add glow animation */
+            animation: glowFooter 2s ease-in-out infinite alternate;
+            z-index: 1000; /* Ensure it's above other fixed elements */
         }
 
         @keyframes glowFooter {
             0% {
-                box-shadow: 0 0 10px rgba(204, 94, 255, 0); /* No glow (pink/purple glow) */
+                box-shadow: 0 0 10px rgba(204, 94, 255, 0);
             }
             100% {
-                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8); /* Glow effect (pink/purple glow) */
+                box-shadow: 0 0 20px rgba(204, 94, 255, 0.8);
             }
         }
 
@@ -226,17 +215,16 @@
 
         @keyframes slideIn {
             0% {
-                right: -100%; /* Start off-screen to the right */
+                right: -100%;
                 opacity: 0;
             }
             100% {
-                right: 0; /* Slide in to the right */
+                right: 0;
                 opacity: 1;
             }
         }
 
         @media (max-width: 1200px) {
-            /* Larger devices adjustments */
             .content {
                 width: 90%;
                 max-width: 1000px;
@@ -244,40 +232,36 @@
         }
 
         @media (max-width: 767px) {
-            /* Smaller devices adjustments */
             .content {
                 width: 90%;
                 max-width: 90%;
             }
 
             .profile-picture {
-                max-width: 40vw; /* Increase profile picture size on smaller screens */
+                max-width: 40vw;
             }
 
             .intro p {
-                font-size: 2em; /* Decrease font size */
+                font-size: 2em;
             }
 
             .links {
-                margin-top: 10px; /* Reduce margin top for links */
+                margin-top: 10px;
             }
 
             .links a {
-                font-size: 1.5em; /* Decrease font size */
-                padding: 10px 20px; /* Adjust padding */
+                font-size: 1.5em;
+                padding: 10px 20px;
             }
 
             header h1 {
-                text-align: center; /* Center align header text */
+                text-align: center;
             }
         }
     </style>
 </head>
 <body>
     <div id="loading-screen">
-        <video id="loading-video" autoplay muted loop playsinline>
-            <source src="Loading.mp4" type="video/mp4">
-        </video>
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop playsinline>
@@ -306,34 +290,26 @@
                 <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
             </div>
         </div>
-        <footer>
-            <p>&copy; WWWWWWWWWWWWWWW</p>
-        </footer>
     </div>
+    <footer>
+        <p>&copy; WWWWWWWWWWWWWWW</p>
+    </footer>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
-            // Delay before starting loading video
-            setTimeout(function() {
-                // Show and start loading video from the 3rd second instantly
-                const loadingVideo = document.getElementById("loading-video");
-                loadingVideo.currentTime = 3; // Start from the 3rd second
-                loadingVideo.style.display = "block"; // Show loading video
-                loadingVideo.play(); // Start playing loading video
-            }, 3000); // 3000 milliseconds delay before showing loading video
+            const loadingVideo = document.getElementById("loading-video");
+            const ellipsis = document.getElementById('ellipsis');
 
-            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
+            // Simulate loading screen delay
             setTimeout(function() {
                 document.getElementById("loading-screen").style.display = "none";
-                document.getElementById("loading-video").style.display = "none"; // Hide loading video
                 document.getElementById("video-background").style.filter = "none"; // Remove blur effect
                 document.getElementById("main-video").style.display = "block"; // Display main video
                 document.getElementById("main-video").play(); // Play main video
                 document.getElementById("main-content").style.display = "block";
-            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
+            }, 3000);
 
-            // Ellipsis animation (now faster, every 166 milliseconds)
-            const ellipsis = document.getElementById('ellipsis');
+            // Ellipsis animation
             let count = 0;
             setInterval(() => {
                 count++;
@@ -347,9 +323,10 @@
                     ellipsis.textContent = '...';
                     count = 0;
                 }
-            }, 166); // Change every 0.166 seconds (166 milliseconds)
+            }, 500); // Adjust timing as needed
         });
     </script>
 </body>
 </html>
+
 
