--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
         }
 
         .links a {
-            margin: 10px;
-            padding: 10px 20px; /* Responsive padding */
+            margin: 5px;
+            padding: 5px 10px; /* Responsive padding */
             background: linear-gradient(135deg, #774c96, #59198e);
             color: #fff;
             text-decoration: none;
             font-size: 3em; /* Responsive font size */
-            border-radius: 3px;
+            border-radius: 2px;
             border: 2px solid transparent;
             position: relative;
             right: -100%;
@@ -302,7 +302,7 @@
             </div>
         </div>
         <footer>
-            <p>&copy; WW</p>
+            <p>&copy; WWWWWWWWWWWWWWW</p>
         </footer>
     </div>
 
