--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 
         header h1 {
             margin: 0;
-            font-size: 2em;
-            text-transform: uppercase;
+            font-size: 2.5em;
+            text-transform: normal;
             letter-spacing: 2px;
             color: #fff;
         }
@@ -108,7 +108,7 @@
 
         .profile-picture {
             max-width: 12vw; /* Responsive size */
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
             position: relative; /* Position relative for absolute border */
