--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
         .profile-picture {
             max-width: 12vw; /* Responsive size */
+            margin-top: 0px;
             margin-bottom: 5px;
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
@@ -134,13 +135,14 @@
 
         .intro h2 {
             font-size: 2em;
-            margin-top: 0;
+            margin-top: 0px;
         }
 
         .intro p {
             font-size: 3em; /*Title size*/
             line-height: 1;
-            margin-bottom: 0;
+            margin-top: 5px;
+            margin-bottom: 0px;
         }
 
         .links {
