--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             text-transform: normal;
             letter-spacing: 2px;
             color: #fff;
+            text-align: center; /* Center align the text */
         }
 
         .content {
@@ -285,7 +286,7 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world </h1>
+            <h1>Welcome to my world</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
@@ -349,3 +350,4 @@
     </script>
 </body>
 </html>
+
