--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         header h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 2em;
             text-transform: normal;
             letter-spacing: 2px;
             color: #fff;
@@ -288,7 +288,7 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world</h1>
+            <h1>Welcome to my world!</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
