--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             }
 
             .links {
-                margin-top: 10px; /* Reduce margin top for links */
+                margin-top: 5px; /* Reduce margin top for links */
             }
 
             .links a {
@@ -288,7 +288,7 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world!</h1>
+            <h1>Welcome to my world</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
