--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </video>
     <div id="main-content">
         <header>
-            <h1>Welcome to my world</h1>
+            <h1>Ah, skill issue I'm afraid.</h1>
         </header>
         <div class="content">
             <div class="profile-picture">
