--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <a href="https://www.facebook.com/ngleeqthai/" target="_blank"><img src="Facebook Logo.png" alt="Facebook Logo"> Facebook</a>
                 <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank"><img src="Instagram Logo.png" alt="Instagram Logo"> Instagram</a>
                 <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank"><img src="Steam Logo.png" alt="Steam Logo"> Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank"><img src="settings-logo.png" alt="Specs Logo"> My Settings</a>
+                <a href="https://specs.gg/ngleeq.thai" target="_blank"><img src="settings-logo.png" alt="Specs Logo.png"> My Settings</a>
                 <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank"><img src="Valorant Logo.png" alt="Valorant Logo" class="valorant-logo"> Valorant Tracker</a>
             </div>
         </div>
